# markov_text

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: binary_io.hpp  chain.cpp  chain.h  chain.hpp  chain_constructor.cpp  chain_constructor.h  chain_constructor.hpp  frequency_matrix.cpp  frequency_matrix.h  frequency_matrix.hpp  frequency_table.hpp  generator.hpp  main.cpp  sequence.hpp  text_generator.cpp  text_generator.h  text_generator.hpp  token.cpp  token.hpp  token_map.cpp  token_map.h  token_map.hpp  util.cpp  util.h
